--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+# Core MCP dependencies
+mcp>=1.0.0
+fastmcp>=0.4.0
 
+# Financial data
+yfinance>=0.2.18
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Async support
+asyncio-compat>=0.1.0
+
+# Utilities
+python-dateutil>=2.8.0
+requests>=2.28.0
+urllib3>=1.26.0
+
+# Development dependencies (optional)
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
