--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,19 @@ authors = [
 ]
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 
 dependencies = [
     "mcp>=1.0.0",
-    "fastmcp>=0.4.0",
+    "fastmcp>=2.11.0",
     "yfinance>=0.2.18",
     "pandas>=2.0.0",
     "numpy>=1.24.0",
-    "asyncio-compat>=0.1.0",
     "python-dateutil>=2.8.0",
     "requests>=2.28.0",
-    "urllib3>=1.26.0"
+    "urllib3>=1.26.0",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
 ]
 
 [project.optional-dependencies]
@@ -80,7 +81,7 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
